change tests and conditions for pages
