# src/main/resources/openApi.yaml
@@ -141,6 +141,26 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+  /all:
+    get:
+      summary: Get all stories
+      tags:
+        - story
+      responses:
+        '200':
+          description: A list of stories
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Story'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse" 
   /story/{userId}:
     get:
       summary: Stories of a given user
@@ -162,6 +182,33 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Story'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /{id}:
+    delete:
+      summary: Delete a story
+      tags:
+        - story
+      parameters:
+        - name: id
+          in: path
+          description: Id of the searched story
+          required: true
+          schema:
+            type: string
+        - name: Authorization
+          in: header
+          description: Authentication Token
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: No Content
         default:
           description: unexpected error
           content:
@@ -301,6 +348,12 @@ paths:
           required: true
           schema:
             type: string
+        - name: Authorization
+          in: header
+          description: Authentication Token
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: The searched page
@@ -316,6 +369,27 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+    delete:
+      summary: Delete a page
+      tags:
+        - page
+      parameters:
+        - name: id
+          in: path
+          description: Id of the searched page
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: No Content
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
   /page/story/{id}:
     get:
       summary: get the first page of a story
